--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,8 +1,125 @@
-@book{lamport1986latex,
-  title={LaTeX: A Document Preparation System},
-  author={Lamport, Leslie},
-  isbn={9780201157901},
-  lccn={85019994},
-  year={1986},
-  publisher={Addison-Wesley Publishing Company}
+@inproceedings{cheng2020learned,
+  title={Learned image compression with discretized gaussian mixture likelihoods and attention modules},
+  author={Cheng, Zhengxue and Sun, Heming and Takeuchi, Masaru and Katto, Jiro},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={7939--7948},
+  year={2020}
+}
+@inproceedings{choi2019variable,
+  title={Variable rate deep image compression with a conditional autoencoder},
+  author={Choi, Yoojin and El-Khamy, Mostafa and Lee, Jungwon},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={3146--3154},
+  year={2019}
+}
+@article{mishra2022deep,
+  title={Deep architectures for image compression: a critical review},
+  author={Mishra, Dipti and Singh, Satish Kumar and Singh, Rajat Kumar},
+  journal={Signal Processing},
+  volume={191},
+  pages={108346},
+  year={2022},
+  publisher={Elsevier}
+}
+@inproceedings{cheng2018deep,
+  title={Deep convolutional autoencoder-based lossy image compression},
+  author={Cheng, Zhengxue and Sun, Heming and Takeuchi, Masaru and Katto, Jiro},
+  booktitle={2018 Picture Coding Symposium (PCS)},
+  pages={253--257},
+  year={2018},
+  organization={IEEE}
+}
+@inproceedings{balle2018efficient,
+  title={Efficient nonlinear transforms for lossy image compression},
+  author={Ball{\'e}, Johannes},
+  booktitle={2018 Picture Coding Symposium (PCS)},
+  pages={248--252},
+  year={2018},
+  organization={IEEE}
+}
+@article{sadeeq2021image,
+  title={Image compression using neural networks: a review},
+  author={Sadeeq, Haval T and Hameed, Thamer H and Abdi, Abdo S and Abdulfatah, Ayman N},
+  journal={International Journal of Online and Biomedical Engineering (iJOE)},
+  volume={17},
+  number={14},
+  pages={135--153},
+  year={2021}
+}
+@article{hu2021learning,
+  title={Learning end-to-end lossy image compression: A benchmark},
+  author={Hu, Yueyu and Yang, Wenhan and Ma, Zhan and Liu, Jiaying},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={44},
+  number={8},
+  pages={4194--4211},
+  year={2021},
+  publisher={IEEE}
+}
+@article{theis2017lossy,
+  title={Lossy image compression with compressive autoencoders},
+  author={Theis, Lucas and Shi, Wenzhe and Cunningham, Andrew and Husz{\'a}r, Ferenc},
+  journal={arXiv preprint arXiv:1703.00395},
+  year={2017}
+}
+@inproceedings{zhang2018unreasonable,
+  title={The unreasonable effectiveness of deep features as a perceptual metric},
+  author={Zhang, Richard and Isola, Phillip and Efros, Alexei A and Shechtman, Eli and Wang, Oliver},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={586--595},
+  year={2018}
+}
+@article{minnen2018joint,
+  title={Joint autoregressive and hierarchical priors for learned image compression},
+  author={Minnen, David and Ball{\'e}, Johannes and Toderici, George D},
+  journal={Advances in neural information processing systems},
+  volume={31},
+  year={2018}
+}
+@inproceedings{yang2021slimmable,
+  title={Slimmable compressive autoencoders for practical neural image compression},
+  author={Yang, Fei and Herranz, Luis and Cheng, Yongmei and Mozerov, Mikhail G},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={4998--5007},
+  year={2021}
+}
+@inproceedings{wang2022neural,
+  title={Neural data-dependent transform for learned image compression},
+  author={Wang, Dezhao and Yang, Wenhan and Hu, Yueyu and Liu, Jiaying},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={17379--17388},
+  year={2022}
+}
+@ARTICLE{125072,
+  author={Wallace, G.K.},
+  journal={IEEE Transactions on Consumer Electronics}, 
+  title={The JPEG still picture compression standard}, 
+  year={1992},
+  volume={38},
+  number={1},
+  pages={xviii-xxxiv},
+  doi={10.1109/30.125072}}
+@ARTICLE{952804,
+  author={Skodras, A. and Christopoulos, C. and Ebrahimi, T.},
+  journal={IEEE Signal Processing Magazine}, 
+  title={The JPEG 2000 still image compression standard}, 
+  year={2001},
+  volume={18},
+  number={5},
+  pages={36-58},
+  doi={10.1109/79.952804}}
+@ARTICLE{9503377,
+  author={Bross, Benjamin and Wang, Ye-Kui and Ye, Yan and Liu, Shan and Chen, Jianle and Sullivan, Gary J. and Ohm, Jens-Rainer},
+  journal={IEEE Transactions on Circuits and Systems for Video Technology}, 
+  title={Overview of the Versatile Video Coding (VVC) Standard and its Applications}, 
+  year={2021},
+  volume={31},
+  number={10},
+  pages={3736-3764},
+  doi={10.1109/TCSVT.2021.3101953}}
+@misc{BPGImageformat,
+  author = {Fabrice Bellard},
+  title = {BPG Image format},
+  howpublished = {\url{https://bellard.org/bpg/}},
+  note = {Consultato: 17-10-2023}
 }
