--- a/main.tex
+++ b/main.tex
@@ -57,12 +57,15 @@
 
     % NOTA: l'ambiente \abstract rimuove il numero della pagina e resetta il contatore delle pagine. 
     \chapter*{Introduzione}
-    Nell’era moderna la crescente quantità di dati di cui usufruiamo ogni giorno sta ricevendo, dagli esperti del settore, molte attenzioni. In quanto il troughput e la quantità di memoria di cui disponiamo sui nostri dispositivi sono, seppur ad oggi ampiamente sufficienti, comunque limitate. Un’altra ragione di questa attenzione è la crescente diffusione di servizi in tempo reale che quindi richiedono di scambiare quantità di dati considerevoli in pochissimo tempo. Un esempio di tali servizi potrebbe essere l’uso della realtà aumentata in ambito medico o di ricerca. Comprimere i dati è quindi ormai una necessità, che si farà sempre più impellente con il crescere delle dimensioni dei dati che andremo a gestire.
-    La compressione è un processo che mira a minimizzare il numero di bit utilizzati per rappresentare una certa informazione senza intaccarne drasticamente la qualità.
-    Comprimere un’immagine significa ridurre la quantità di dati necessari per rappresentare l’immagine, questo si ottiene riducendo le ridondanze e eliminando i dati irrilevanti.
-    A partire dai primi anni primi anni novanta infatti si sono iniziate a sviluppare alcune tecniche, a cui oggi si fa rifermento come tecniche “tradizionali”, per comprimere le immagini. Stiamo parlando ed esempio di JPEG e del suo successore JPEG2000, di più recente sviluppo sono invece i codec BPG e VVC.
-    Più recentemente l’attenzione dei ricercatori si è spostata su metodi basati su deep learning. Questi metodi presentano diversi vantaggi rispetto ai metodi “tradizionali”, infatti molte volte permettono di ottenere performance migliori rispetto ai metodi classici.
-    In questo documento ci proponiamo di fornire una panoramica dei metodi di compressione tradizionali più usati, e di quelli basati su deep learning che hanno fornito un maggiore contributo allo sviluppo di questi ultimi. Dopo aver presentato le varie tecniche vogliamo fornire una valutazione delle prestazioni in modo da poterli comprare ed evidenziare potenzialità e difetti di ognuno. In conclusione vorremmo fornire alcuni spunti per che potrebbero favorire l’adozione di queste tecniche più recenti nella nostra vita digitale di tutti i giorni.
+    Nell’era moderna la crescente quantità di dati di cui usufruiamo ogni giorno sta ricevendo, dagli esperti del settore, molte attenzioni. In quanto il troughput e la quantità di memoria di cui disponiamo sui nostri dispositivi sono, seppur ad oggi ampiamente sufficienti, comunque limitati. Un’altra ragione di questa attenzione è la crescente diffusione di servizi in tempo reale che quindi richiedono di scambiare quantità di dati considerevoli in pochissimo tempo. Un esempio di tali servizi potrebbe essere l’uso della realtà aumentata.
+    Comprimere i dati è quindi ormai una necessità, che si farà sempre più impellente con il crescere delle dimensioni dei dati che andremo a gestire.\\
+    I metodi di compressione delle immagini sono solitamente divisi in due grandi categorie, Lossless e Lossy. I primi comprimono la rappresentazione senza scartare alcuna informazione. I secondi invece permettono di scartare alcune informazioni, senza impattare significativamente sulla qualità, per permettere una rappresentazione più ridotta.\cite{sadeeq2021image}
+    Noi ci concentreremo sui metodi Lossy in quanto sono quelli che stanno suscitando più interesse e presentano più difficolta.\\
+    Comprimere un’immagine significa ridurre la quantità di bit necessari per rappresentare l’immagine, questo si ottiene riducendo le ridondanze e eliminando i dati irrilevanti. \cite{mishra2022deep}
+    A partire dai primi anni primi anni novanta si sono iniziate a sviluppare alcune tecniche di compressione, a cui oggi si fa rifermento come tecniche “tradizionali”. Stiamo parlando ed esempio di JPEG e del suo successore JPEG2000, di più recente sviluppo sono invece i codec BPG e VVC.
+    Più recentemente l’attenzione si è spostata su metodi basati su deep learning. Questi metodi presentano diversi vantaggi rispetto ai metodi “tradizionali”, principalmente la flessibilità e la capacità di individuare con più precisione le regioni più significative delle immagini.
+    In questo documento ci proponiamo di fornire una panoramica dei metodi di compressione tradizionali più usati, e di quelli basati su deep learning che hanno fornito un maggiore contributo allo sviluppo di questi ultimi. Nello specifico ci concenteremo sui metodi che fanno uso di autoencoder, in quanto hanno prodotto i risultati più significativi.\\
+    Dopo aver presentato le varie tecniche forniremo una valutazione delle prestazioni ed evidenziaremo potenzialità e difetti. In conclusione vorremmo fornire alcuni spunti per che potrebbero essere oggetto di future ricerche o approfondimenti.
     \cleardoublepage
 
     \tableofcontents
