Final revison before first submission to refering teacher on monday 23102023

--- a/Capitoli/dedica.tex
+++ b/Capitoli/dedica.tex
@@ -1,6 +1,5 @@
 \vspace*{\stretch{1}}
 \begin{flushright}
-    \textit{Apes. Together. Strong.}
+    \textit{Ringraziamenti}
 \end{flushright}
-Testo di prova
 \vspace{\stretch{4}}
