--- a/Capitoli/metodiTradizionali.tex
+++ b/Capitoli/metodiTradizionali.tex
@@ -4,17 +4,21 @@ Andiamo ora a parlare brevemente dei metodi che andremo a considerare quando val
 
 \section{JPEG}
 Questo metodo di compressione sviluppato nel 1992 è diventato in poco tempo ed è attualmente il formato di compressione più diffuso. Nonostante in numerosi tentativi di sostituirlo con formati più moderni, questo è rimasto ancora ad oggi il formato più usato. Il JPEG si basa sull’utilizzo della DCT per realizzare la rappresentazione sparsificata dell’immagine originale. \cite{ 125072} \\
+\newline
 IMMAGINE CON JPEG
 
 \section{JPEG2000}
 Nel 2001 con la crescente diffusione di internet e con l’aumento di dimensione delle immagini e la richiesta di una maggiore qualità da parte degli utenti viene sviluppato questo nuovo formato chiamato appunto JPEG2000 per l’anno in cui è stato sviluppato.\\
 JPEG2000 non utilizza la DCT come il suo predecessore ma vien introdotta una nuova trasformata la DWT o Discrete Wavelet Transformat che si propone di meglio identificare e comprimere i bordi delle figure che compongono le immagini. JPEG2000 quindi voleva essere un formato di qualità superiore con una compressione più efficiente. \cite{952804}
+\newline
 IMMAGINE CON JPEG2000
 
 \section{BPG}
 Questo formato è stato sviluppato da Fabrice Bellard nel 2014 come sostituto all’ormai affermato formato JPEG. Questo metodo di codifica si basa sulla codifica intra-frame del codec HEVC o H.265. \cite{BPGImageformat} Bellard voleva realizzare un formato molto leggero che potesse fornire immagini più compresse rispetto a JPEG, ma con una qualità superiore.\\
+\newline
 IMMAGINE CON BPG
 
 \section{VVC}
 Versatile Video Coding (VVC) o H.266 è lo standard di codifica video più recente, finalizzato nel luglio 2020. È stato sviluppato dal Joint Video Experts Team (JVET) dell'ITU-T Video Coding Experts Group (VCEG) e dell'ISO/IEC Moving Picture Experts Group (MPEG) per soddisfare la crescente richiesta di una migliore compressione video e per supportare una più ampia gamma di contenuti multimediali attuali e applicazioni emergenti come contenuti HDR, a 360°, per la Realtà Virtuale (VR) o la Realtà Aumentata (AR).\cite{9503377}\\
+\newline
 IMMAGINE CON VVC
