--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \usepackage[output-decimal-marker={,}]{siunitx} % per le unità di misura
 \usepackage{subcaption}                         % per le sottodidascalie
 \usepackage{svg}                                % per inserire file SVG
+\usepackage{float}                              % per posizionare le immagini esattamente come appaiono nel testo
 
 \usepackage[italian]{babel}
 \selectlanguage{italian}
@@ -57,10 +58,11 @@
 
     % NOTA: l'ambiente \abstract rimuove il numero della pagina e resetta il contatore delle pagine. 
     \chapter*{Sommario}
-    Questo elaborato esplora il campo emergente della compressione delle immagini utilizzando autoencoder. L’obiettivo principale della ricerca è studiare e analizzare le tecniche esistenti per la compressione delle immagini tramite autoencoder.\\
-    Nel primo capitolo, la tesi fornisce una panoramica dello stato dell’arte della compressione delle immagini, discutendo le tecniche tradizionali e come gli autoencoder si inseriscono in questo panorama. Viene fornita una spiegazione dettagliata del funzionamento degli autoencoder e dei loro vantaggi rispetto ai metodi di compressione delle immagini tradizionali.\\
-    Il secondo capitolo si concentra sull’analisi delle tecniche esistenti per la compressione delle immagini tramite autoencoder. Vengono presentati vari studi di caso e vengono discusse le prestazioni di ciascuno in termini di qualità dell’immagine e rapporto di compressione.\\
-    Nel terzo e ultimo capitolo, la tesi esplora i possibili sviluppi futuri nel campo della compressione delle immagini tramite autoencoder. Si discute di come le tecniche attuali potrebbero essere migliorate e si ipotizzano nuove direzioni di ricerca.\\
+    Questo elaborato esplora il campo emergente della compressione delle immagini utilizzando l'intelligenza artificiale. L’obiettivo principale è studiare e analizzare le tecniche esistenti per la compressione delle immagini, nello specifico quelle che fanno uso di autoencoder.\\
+    Nel primo capitolo, viene fornita una panoramica dello stato dell’arte della compressione delle immagini utilizzando le tecniche tradizionali. Viene fornita una rapida spiegazione del funzionamento di queste tecniche.\\
+    Il secondo capitolo si concentra sull’analisi delle tecniche per la compressione delle immagini tramite intelligenza artificiale. Viene fornita una rapida panoramicadell'attuale stato della ricerca. Successivamente viene fornita una spiegazione del principio di funzionamento degli autoencoder. Infine vengono presentate alcune ricerche che hanno portato un apporto significativo nella ricerca di queste tecniche.\\
+    Nel terzo capitolo vengono analizzate le prestazioni di alcuni metodi in termini di qualità oggettiva e soggettiva dell'immagine, compressione e tempo di compressione. 
+    Nel quarto e ultimo capitolo vengono esplorati i possibili sviluppi futuri nel campo della compressione delle immagini tramite autoencoder. Si discute di come le tecniche attuali potrebbero essere migliorate e si ipotizzano nuove direzioni di ricerca.\\
     In conclusione, questa tesi fornisce una panoramica completa dello stato dell’arte della compressione delle immagini tramite autoencoder e offre spunti preziosi per future ricerche in questo campo.\\
 
     \cleardoublepage
