Applied further corrections

--- a/main.tex
+++ b/main.tex
@@ -40,7 +40,7 @@
 % questi valori vengono usati nella composizione del frontespizio
 \title{Compressione di immagini tramite autoencoder, stato dell’arte e sviluppi futuri}
 \author{Stella Filippo}
-\date{GG/MM/AAAA}
+\date{16/11/2023}
 \newcommand{\supervisor}{Prof. Cagnazzo Marco}
 %\newcommand{\assistantsupervisor}{Cognome Nome}
 
