--- a/Capitoli/introduzione.tex
+++ b/Capitoli/introduzione.tex
@@ -4,6 +4,7 @@ Nell’era moderna la crescente quantità di dati, di cui usufruiamo ogni giorno
 A partire dai primi anni novanta infatti si sono iniziate a sviluppare alcune tecniche, a cui oggi si fa rifermento come tecniche tradizionali, per comprimere le immagini. Stiamo parlando ed esempio di JPEG e del suo successore JPEG2000, di più recente sviluppo sono invece i codec BPG e VVC.
 Ultimamente l’attenzione dei ricercatori si è spostata su metodi che fanno uso dell'intelligenza artificiale. Questi metodi presentano diversi vantaggi rispetto ai metodi tradizionali, infatti molte volte permettono di ottenere performance migliori rispetto ai metodi classici.\\
 In questo documento ci proponiamo di fornire una panoramica dei metodi di compressione tradizionali più usati, e di quelli che fanno uso dell'intelligenza artificiale che hanno fornito un maggiore contributo allo sviluppo di questi ultimi. Dopo aver presentato le varie tecniche vogliamo fornire una valutazione delle prestazioni in modo da poterli comparare ed evidenziare potenzialità e difetti di ognuno.\\
+Per concludere vorremmo fornire alcuni spunti che potrebbero favorire l’adozione di queste tecniche più recenti nella nostra vita digitale di tutti i giorni o suggerire nuovi possibili fronti di ricerca.\\
 Iniziamo fornendo una spiegazione di cosa sia la compressione. La compressione è un processo che mira a minimizzare il numero di bit utilizzati per rappresentare una certa informazione senza intaccarne drasticamente la qualità. Questo obbiettivo viene raggiunto riducendo le ridondanze ed eliminando i dati non necessari.
 Tutti i framework di compressione consistono in una coppia codificatore-decodificatore. Data un’immagine da comprimere $x$ il codificatore, composto da una trasformata $\epsilon$ e una funzione di quantizzazione $Q$, può essere espresso con la seguente formulazione.\\
 \begin{equation}\label{eq:eqCondificatore}
@@ -21,7 +22,6 @@ Un primo blocco si occupa di convertire l’immagine in una rappresentazione lat
 Successivamente si ha un blocco che si occupa di effettuare la quantizzazione, ovvero di mappare i valori in ingresso in un insieme di valori finito e di dimensione più piccola rispetto a quello di ingresso. In questo passaggio si realizza la perdita di informazione caratteristica della codifica lossy.\\
 Un ultimo blocco si occupa di effettuare la codifica entropica, in modo da comprimere ulteriormente l’informazione mappando i simboli usati più spesso con pochi bit.\\
 Questo schema a blocchi è rappresentato nelli'mmagine \ref{fig:LossyCompressorDiagram}\\
-Per concludere vorremmo fornire alcuni spunti che potrebbero favorire l’adozione di queste tecniche più recenti nella nostra vita digitale di tutti i giorni o suggerire nuovi possibili fronti di ricerca.
 \begin{figure}[t!]
     \centering
     \includegraphics[width=0.8\textwidth]{Immagini/LossyCompressorDiagram.png}
